<resources>
    <string name="app_name">CadenaElectronique</string>
    <string name="appareils">Page de connexion Bluetooth avec le cadena</string>
    <string name="enable_check">Enable</string>
    <string name="visible_check">Visible</string>
    <string name="description_img">Bluetooth Icone</string>
    <string name="bouton_suivant">Suivant</string>
    <string name="connexion_bt">Connexion au Cadena</string>
    <string name="leave_button">Quitter l\'application</string>
    <string name="name_bt">ESEO</string>
    <string name="connection_msg">L\'appareil ESEO est connécté</string>
    <string name="texte_menu">Choisissez l\'action que vous voulez effetuer ?</string>
    <string name="verrouillage">Verrouillage</string>
    <string name="enregistrement">Enregistrement d\'un badge</string>
    <string name="GPS">Coordonnées GPS du Cadena</string>
    <string name="retour">Précédent</string>
    <string name="bluetooth_not_supported">Bluetooth not supported</string>
    <string name="eteint">Turned off</string>
    <string name="allumer">Turned on</string>
    <string name="visible">Visible for 2 minutes</string>
    <string name="showing_device">Showing Devices</string>
    <string name="demande_verrouillage">Verrouillage</string>
    <string name="demande_enregistrement_badge">Vous pouvez poser votre badge sur le capteur</string>
</resources>