<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MenuActivity"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texte_menu"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="2"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:layout_weight="1"
        android:id="@+id/verrouillage_button"
        android:text="@string/verrouillage" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:layout_weight="1"
        android:id="@+id/enregistrement_button"
        android:text="@string/enregistrement"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:layout_weight="1"
        android:id="@+id/gps_button"
        android:text="@string/GPS"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/bouton_retour"
        android:layout_margin="8dp"
        android:text="@string/retour"/>

</LinearLayout>